--- a/custom.css
+++ b/custom.css
@@ -49,6 +49,8 @@ p {
     display: block;
     position: relative;
     margin: 0 auto;
+    justify-content: center;
+    align-items: center;
 }
 
 
